@@ -17,9 +17,8 @@ Dm-Upload-Allowed: yes
 Homepage: http://www.gnome.org/projects/evolution/
 Vcs-Svn: svn://svn.debian.org/svn/pkg-evolution/unstable/evolution-data-server
 Vcs-Browser: http://svn.debian.org/wsvn/pkg-evolution/unstable/evolution-data-server
-Build-Depends: debhelper (>= 7.2.3~),
+Build-Depends: debhelper (>= 8.9.4),
                cdbs (>= 0.4.37),
-               hardening-includes,
                dpkg-dev (>= 1.14.16),
                pkg-config (>= 0.16),
                flex,
